Fix alignment

--- a/faceted-search/webapp/styles/App.less
+++ b/faceted-search/webapp/styles/App.less
@@ -12,7 +12,11 @@ body {
   > .table {
     display: table;
 
-    > .left {
+    .row {
+      display: table-row;
+    }
+
+    .left {
       display: table-cell;
       width: 20%;
       padding: 10px;
@@ -22,9 +26,9 @@ body {
       }
     }
 
-    > .right {
+    .right {
       display: table-cell;
-      padding: 10px;
+      padding: 0 10px 0 10px;
       vertical-align: top;
     }
   }
